--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">CharBuilder</string>
     <string name="action_settings">Settings</string>
+    <string name="title">Das ist ein Titel</string>
+    <string name="description">und das nicht</string>
 </resources>
