--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="cc_gear">Ausrüstung</string>
 
     <string name="selected_obligation">Ausgewählte Pflicht</string>
+    <string name="second_selected_obligation">Zweite Pflicht</string>
     <string name="random_obligation_button">Zufällige Pflicht</string>
     <!-- Character Creation Obligation Types-->
     <string name="obligation_addiction">Sucht</string>
