--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,4 +112,5 @@
     <string name="dice_selected_title">Ausgewählte Würfel</string>
     <string name="button_roll_dice">Würfeln</string>
     <string name="button_roll_history">Verlauf anzeigen</string>
+    <string name="dice_result">Ergebnis</string>
 </resources>
