--- a/Dokumentation/LaTeX Doku/content/Auswertung.tex
+++ b/Dokumentation/LaTeX Doku/content/Auswertung.tex
@@ -1,5 +1,6 @@
 \newpage
 \section{Einleitung}
+In diesem Dokument wird die Entwicklung der Applikation CharBuilder für das Wahlpflichtfach Mobile Applikationen dargestellt. Die Aufgabenstellung hat uns sowohl die Wahl der Plattform als auch die Art der App offengelassen. Da wir in der Vorlesung die Grundlagen der App-Entwicklung
 
 \section{Stand der Technik}
 
