Einleitung und Anforderungen

--- a/Dokumentation/LaTeX Doku/CharBuilderDoku.tex
+++ b/Dokumentation/LaTeX Doku/CharBuilderDoku.tex
@@ -62,6 +62,9 @@
 % in diese Datei gehört der Inhalt des Dokumentes:
 \input{content/Auswertung.tex}
 
+\bibliography{content/quellen}
+\bibliographystyle{alpha}
+
 \end{document}
 %% Dokument ENDE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
