--- a/Dokumentation/LaTeX Doku/content/Auswertung.tex
+++ b/Dokumentation/LaTeX Doku/content/Auswertung.tex
@@ -46,7 +46,7 @@ Android Studio ist die offizielle Entwicklungsumgebung für native Androidprogra
 Die App stellt einen digitalen Pen und Paper Charakterbogen dar. Es wird möglich sein, neue Charaktere anzulegen und die bereits bestehenden zu verwalten. Der Nutzer soll außerdem die Möglichkeit haben, seine Charaktere auf andere Geräte zu übertragen. Zu Beginn werden wir uns auf das \glqq Star Wars : Am Rande des Imperiums\grqq- Regelwerk konzentrieren.
 \subsection{Must have}
 
-Text der erklärt was must have bedeutet
+Unter \grqq Must have\grqq{} ist jede Funktionalität aufgelistet welche \textbf{unbedingt} umgesetzt werden muss um das Projekt als erfolgreich bezeichnen zu können. Diese Kategorie wird oft auch \grqq Minimale Anforderungen\grqq{} genannt.
 
 \begin{itemize}
 	\item Erstellung eines neuen Charakters
@@ -60,7 +60,7 @@ Text der erklärt was must have bedeutet
 
 \subsection{Should have}
 
-Text der erklärt was should have bedeutet
+Die Kategorie \grqq Should have\grqq{} fasst all die Punkte unter sich zusammen welche für ein erfolgreiches Projekt nicht unbedingt erforderlich sind, aber dennoch ein wichtiger Bestandteil sein können. Als Beispiel sei eine Funktionalität zu sehen welche das Produkt lediglich erweitert, von welcher die Grundfunktionalitäten allerdings nicht abhängig sind.
 
 \begin{itemize}
 	\item Importieren und Exportieren von Charakteren in JSON
@@ -72,7 +72,7 @@ Text der erklärt was should have bedeutet
 
 \subsection{Could have}
 
-Text der erklärt was could have bedeutet
+Features welche unter \grqq Could have\grqq{} aufgelistet sind, werden nur umgesetzt wenn alle Punkte unter \grqq Must have\grqq{} und \grqq Should have\grqq{} bereits abgearbeitet sind. Sie sind vollkommen optional.
 
 \begin{itemize}
 	\item Möglichkeit Charaktere für andere Regelwerke zu erstellen
@@ -81,7 +81,7 @@ Text der erklärt was could have bedeutet
 
 \subsection{Won't have}
 
-Text der erklärt was won't have bedeutet
+\grqq Won't have\grqq{} beinhaltet jene Punkte welche \textbf{nicht} umgesetzt werden. Sie wurden von den Entwicklern oder Auftraggebern zu Projektspezifikationbeginn ausgeschlossen.
 
 \begin{itemize}
 	\item Gruppenverwaltung(Möglichkeit für Spielleiter, seine Gruppenmitglieder einzusehen
