--- a/Dokumentation/LaTeX Doku/content/Auswertung.tex
+++ b/Dokumentation/LaTeX Doku/content/Auswertung.tex
@@ -12,7 +12,7 @@ Im nachfolgenden wird erläutert welche Technologien wir für die Erstellung der
 und warum wir uns für die entschieden haben. Hierbei haben wir den Text in die Unterkategorien Android(Betriebssystem), Kotlin(Programmiersprache), Gson(Json Java-Lib), Gradle(Build Tool), Android Studio(IDEA) aufgeteilt, dies sind die wichtigsten Technologien die wird nutzen um unsere App zu entwickeln.
 
 \subsection{Android}
-Wie in der Einleitung geschrieben haben wir uns für Android als Betriebssystem entschieden. Da verschiedene Version dessen auf unterschiedlichen Geräten verteilt sind
+Wie in der Einleitung geschrieben, haben wir uns für Android als Betriebssystem entschieden. Da verschiedene Version dessen auf unterschiedlichen Geräten verteilt sind
 muss man sich als Entwickler darüber hinaus auch für ein Mindest-API-Level entscheiden. Dies stellt die niedrigste Android Version dar, unter welcher die App ausgeführt werden kann.
 Bei der Wahl des API-Levels spielen verschiedene Faktoren eine Rolle, unter anderem wie viele der Android Geräte welche Version des Betriebssystems ausführen oder ob der Entwickler
 Funktionen nutzen möchte die erst ab einer bestimmten Version verfügbar sind.\\
@@ -38,52 +38,49 @@ Gson ist eine Java Bibliothek zur Serialization und Deserialization. Sie wird ge
 
 \subsection{Gradle}
 
-Gradle ist ein weit verbreitetes Build-Tool welches automatisiert arbeitet und unterstützung für mehrere verschiedene Sprachen bietet. Es wird typischerweise für Android Applikationen verwendet welche mit Android Studio entwickelt werden, da das Tool tief in die Entwicklungsumgebung integriert ist. Zu unserer Entscheidung diese Programm zu werden kann nicht viel gesagt werden, da es wie oben erwähnt bereits integriert war und eine alternative neben großem Mehraufwand keine Vorzüge geboten hätte.
+Gradle ist ein weit verbreitetes Build-Tool, welches automatisiert arbeitet und Unterstützung für mehrere verschiedene Sprachen bietet. Es wird typischerweise für Android Applikationen verwendet, welche mit Android Studio entwickelt werden, da das Tool tief in die Entwicklungsumgebung integriert ist. Zu unserer Entscheidung dieses Programm zu verwenden kann nicht viel gesagt werden, da es wie oben erwähnt bereits integriert war und eine Alternative neben großem Mehraufwand keine Vorzüge geboten hätte.
 
 \subsection{Android Studio}
 
-Android Studio ist die offizielle Entwicklungsumgebung für native Androidprogrammierung. Es bietet neben den bekannten IDE Funktionen wie Syntax Highlighting, Autovervollständigung, Instant Run(Es wird nur der veränderte Teil neu kompiliert) und Debugger auch einen Android Emulator um verschiedene Geräte und Android Version zu simulieren. Die IDE basiert auf IntelliJ's Softwareprodukten. Mit der Version 3.0.1 wurde die Entwicklungsumgebung für Kotlin angepasst, dies ist auch die Version welche wir zur Entwicklung unserer App verwendeten. Dabei liefert die neue Version ebenfalls ein Programm um Java-Code direkt in Kotlin-Code umzuwandeln, dies erleichtert dem Entwickler anfangs den Einstieg sollte im späteren verlauf aber nur selten genutzt werden um eine einheitliche Codequalität zu erreichen.
-
-\subsection{Android Studio}
-
-Android Studio ist die offizielle Entwicklungsumgebung für native Androidprogrammierung. Es bietet neben den bekannten IDE Funktionen wie Syntax Highlighting, Autovervollständigung, Instant Run(Es wird nur der veränderte Teil neu kompiliert) und Debugger auch einen Android Emulator um verschiede Geräte und Android Version zu simulieren. Die IDE basiert auf IntelliJ's Softwareprodukten. Mit der Version 3.0.1 wurde die Entwicklungsumgebung für Kotlin angepasst, dies ist auch die Version welche wir zur Entwicklung unserer App verwendeten. Dabei liefert die neue Version ebenfalls ein Programm um Java-Code direkt in Kotlin-Code umzuwandeln, dies erleichtert dem Entwickler anfangs den Einstieg sollte im späteren verlauf aber nur selten genutzt werden um eine einheitliche Codequalität zu erreichen.
+Android Studio ist die offizielle Entwicklungsumgebung für native Androidprogrammierung. Es bietet neben den bekannten IDE Funktionen wie Syntax Highlighting, Autovervollständigung, Instant Run(Es wird nur der veränderte Teil neu kompiliert) und Debugger auch einen Android Emulator, um verschiede Geräte und Android Version zu simulieren. Die IDE basiert auf IntelliJ's Softwareprodukten. Mit der Version 3.0.1 wurde die Entwicklungsumgebung für Kotlin angepasst, dies ist auch die Version welche wir zur Entwicklung unserer App verwendeten. Dabei liefert die neue Version ebenfalls ein Programm, um Java-Code direkt in Kotlin-Code umzuwandeln.  Dem Entwickler wird so der Einstieg in Kotlin erleichtert, das Tool sollte im späteren Verlauf aber nur selten genutzt werden, um eine einheitliche Codequalität zu erreichen.
 
 \newpage
 \section{Anforderungen}
 Im folgenden Kapitel werden die Anforderungen, die wir an unsere App gestellt haben, genauer beschrieben. Diese Anforderungen wurden von uns vor Beginn der App-Implementierung aufgestellt, um einen Überblick über alle Funktionen zu erhalten, die die App beinhalten wird. Die Anforderungen sind in diese vier Kategorien eingeteilt:
 \begin{description}
 \item Must Have \\
-Die in dieser Kategorie aufgeführten Anforderungen beschreiben die Grundfunktionen der App. Sie werden definitiv während der Entwicklung umgesetzt.
+Unter \grqq Must have\grqq{} ist jede Funktionalität aufgelistet welche \textbf{unbedingt} umgesetzt werden muss, um das Projekt als erfolgreich bezeichnen zu können. Diese Kategorie wird oft auch \grqq Minimale Anforderungen\grqq{} genannt.
 \item Should Have \\
-Anforderungen in dieser Kategorie haben eine niedrigere Priorität, sollten aber in der App wiederzufinden sein.
+Die Kategorie \grqq Should have\grqq{} fasst all die Punkte unter sich zusammen, die für ein erfolgreiches Projekt nicht unbedingt erforderlich sind, aber dennoch wichtiger Bestandteil sein können. Als Beispiel sei eine Funktionalität zu sehen, welche das Produkt lediglich erweitert, von welcher die Grundfunktionalitäten allerdings nicht abhängig sind.
 \item Could Have \\
-Diese Kategorie listet Anforderungen auf, die keine Garantie haben, in der App umgesetzt zu werden. Wenn am Ende des Projekts noch Zeit ist könnten sie in die App aufgenommen werden.
+Features, die unter \grqq Could have\grqq{} aufgelistet sind, werden nur umgesetzt, wenn alle Punkte unter \grqq Must have\grqq{} und \grqq Should have\grqq{} bereits abgearbeitet sind. Sie sind vollkommen optional.
 \item Won't Have \\
-In dieser Kategorie stehen Anforderungen, die definitiv nicht für die App vorgesehen sind.
+\grqq Won't have\grqq{} beinhaltet jene Punkte, welche \textbf{nicht} umgesetzt werden. Sie wurden von den Entwicklern oder Auftraggebern zu Beginn der Projektspezifikation ausgeschlossen.
 \end{description}
 
 \subsection{Must Have}
 Als wichtigste Funktion der App gilt das Erstellen eines neuen Charakters. Es muss möglich sein einen Charakter entsprechend des gewählten Regelwerks zu erstellen. Zunächst wird es nur möglich sein Charaktere im Regelwerk \textit{Star Wars: Am Rande des Imperiums} zu erschaffen. Während des Erstellungsprozesses kann der Nutzer auf Regeltexte zurückgreifen, die ihm seine aktuellen Auswahlmöglichkeiten erklären. Diese Regeltexte werden aufgrund von eventuellen Urheberrechtsverletzungen nicht aus dem offiziellen Regelwerk kopiert, sondern von den Entwicklern der App zusammengefasst.
 
 Nachdem der Nutzer einen Charakter erstellt hat, wird dieser in einer Liste mit anderen bereits von ihm angelegten Charakteren angezeigt. In der Liste wird das für den Charakter ausgewählte Bild, sein Name und das Regelwerk, in dem er gespielt wird, dargestellt. Der Nutzer kann nicht mehr benötigte Einträge aus der Liste löschen, Änderungen an den Charakteren vornehmen und diese als PDF-Datei exportieren. Durch einen Klick auf einen der Listeneinträge werden dem Nutzer alle Eigenschaften, Talente, Spezialisierungen, etc. zu einem Charakter angezeigt.
-
-Eine weitere Funktion der App ist das eingebaute Würfeltool. Wenn der Nutzer sich in der Detailansicht zu einem seiner Charaktere befindet, kann er ohne großen Aufwand Proben auf seine Fähigkeiten werfen. Es wird dann berechnet, ob die Probe erfolgreich war oder nicht und das Ergebnis wird sichtbar. Außerdem wird die Probe im Verlauf des Würfeltools angezeigt, sodass der Nutzer eine Übersicht seiner vorherigen Proben erhält. Das Würfeltool ist über die Navigationsleiste erreichbar und bietet eine Auswahl an benötigten Würfeln an.
+\newpage
+Eine weitere Funktion der App ist das eingebaute Würfeltool. Wenn der Nutzer sich in der Detailansicht zu einem seiner Charaktere befindet, kann er ohne großen Aufwand Proben auf seine Fähigkeiten werfen. Es wird dann berechnet, ob die Probe erfolgreich war oder nicht und das Ergebnis erscheint in einem Dialog. Außerdem wird das Ergebnis des Würfelwurfs im Verlauf des Würfeltools angezeigt, sodass der Nutzer eine Übersicht seiner vorherigen Proben erhält. Das Würfeltool ist über die Navigationsleiste im Hauptmenü erreichbar und bietet eine Auswahl an Würfeln, die für das jeweilige Regelwerk benötigt werden.
 
 \subsection{Should Have}
-Damit Charaktere nicht an ein bestimmtes Gerät gebunden sind, sollte der Nutzer die Möglichkeit haben seine Charakterdaten als JSON-Datei in Google Drive zu speichern.
+Damit Charaktere nicht an ein bestimmtes Gerät gebunden sind, sollte der Nutzer die Möglichkeit haben, seine Charakterdaten als JSON-Datei in Google Drive zu speichern.
 
 \subsection{Could Have}
-Es wird nicht ausgeschlossen, dass die App die Erstellung von Charakteren in unterschiedlichen Regelwerken ermöglicht. Allerdings gibt es große Unterschiede in der Komplexität und dem Umfang von Pen and Paper Regelwerken, weswegen zunächst nur ein Regelwerk unterstützt wird. Eine englischsprachige Version der App ist geplant. Das Übersetzen der Regeln nimmt jedoch viel Zeit in Anspruch.
+Es wird nicht ausgeschlossen, dass die App die Erstellung von Charakteren in unterschiedlichen Regelwerken ermöglicht. Allerdings gibt es große Unterschiede in der Komplexität und dem Umfang von Pen and Paper Regelwerken, weswegen zunächst nur ein Regelwerk unterstützt wird. Eine englischsprachige Version der App ist geplant. Das Übersetzen der Regeln nimmt jedoch viel Zeit in Anspruch. Eine weitere mögliche Option wäre das einbinden der Google Billing Api, die dem Entwickler das Freischalten von In-App Käufen ermöglicht.
 
 \subsection{Won't Have}
 Die App wird keine Gruppenverwaltung ermöglichen. Das bedeutet, dass ein Spielleiter nicht die Charaktere seiner Gruppenmitglieder einsehen kann. Außerdem werden in der App keine spielbaren Abenteuer vorhanden sein. Sie dient lediglich dem Speichern und Verwalten von Pen and Paper Charakteren. Nutzer der App werden in der App keine Anleitung für das Spielen von Pen and Paper Abenteuern finden. Alle verwendeten Auszüge aus Regelwerken dienen der Unterstützung während des Erstellungsprozesses. 
 
+\newpage
+WIP
 \subsection{Idee}
 
 Die App stellt einen digitalen Pen und Paper Charakterbogen dar. Es wird möglich sein, neue Charaktere anzulegen und die bereits bestehenden zu verwalten. Der Nutzer soll außerdem die Möglichkeit haben, seine Charaktere auf andere Geräte zu übertragen. Zu Beginn werden wir uns auf das \glqq Star Wars : Am Rande des Imperiums\grqq- Regelwerk konzentrieren.
-\subsection{Must have}
 
-Unter \grqq Must have\grqq{} ist jede Funktionalität aufgelistet welche \textbf{unbedingt} umgesetzt werden muss um das Projekt als erfolgreich bezeichnen zu können. Diese Kategorie wird oft auch \grqq Minimale Anforderungen\grqq{} genannt.
+\subsection{Must have}
 
 \begin{itemize}
 	\item Erstellung eines neuen Charakters
@@ -97,8 +94,6 @@ Unter \grqq Must have\grqq{} ist jede Funktionalität aufgelistet welche \textbf
 
 \subsection{Should have}
 
-Die Kategorie \grqq Should have\grqq{} fasst all die Punkte unter sich zusammen welche für ein erfolgreiches Projekt nicht unbedingt erforderlich sind, aber dennoch ein wichtiger Bestandteil sein können. Als Beispiel sei eine Funktionalität zu sehen welche das Produkt lediglich erweitert, von welcher die Grundfunktionalitäten allerdings nicht abhängig sind.
-
 \begin{itemize}
 	\item Importieren und Exportieren von Charakteren in JSON
 	\item Verlauf von Abenteuern, die ein Charakter schon bestanden hat
@@ -109,16 +104,12 @@ Die Kategorie \grqq Should have\grqq{} fasst all die Punkte unter sich zusammen 
 
 \subsection{Could have}
 
-Features welche unter \grqq Could have\grqq{} aufgelistet sind, werden nur umgesetzt wenn alle Punkte unter \grqq Must have\grqq{} und \grqq Should have\grqq{} bereits abgearbeitet sind. Sie sind vollkommen optional.
-
 \begin{itemize}
 	\item Möglichkeit Charaktere für andere Regelwerke zu erstellen
 	\item Vorgefertigte Charaktere
 \end{itemize}
 
 \subsection{Won't have}
-
-\grqq Won't have\grqq{} beinhaltet jene Punkte welche \textbf{nicht} umgesetzt werden. Sie wurden von den Entwicklern oder Auftraggebern zu Projektspezifikationbeginn ausgeschlossen.
 
 \begin{itemize}
 	\item Gruppenverwaltung(Möglichkeit für Spielleiter, seine Gruppenmitglieder einzusehen
