Stand der Technik UMLet

--- a/Dokumentation/LaTeX Doku/content/Auswertung.tex
+++ b/Dokumentation/LaTeX Doku/content/Auswertung.tex
@@ -8,8 +8,7 @@ Der Aufgabenstellung konnten wir die fünf Themengebiete Stand der Technik, Anfo
 
 \newpage
 \section{Stand der Technik}
-Im nachfolgenden wird erläutert welche Technologien wir für die Erstellung der CharBuilder App verwendet
-und warum wir uns für die entschieden haben. Hierbei haben wir den Text in die Unterkategorien Android(Betriebssystem), Kotlin(Programmiersprache), Gson(Json Java-Lib), Gradle(Build Tool), Android Studio(IDEA) aufgeteilt, dies sind die wichtigsten Technologien die wird nutzen um unsere App zu entwickeln.
+Im Nachfolgenden wird erläutert, welche Technologien wir für die Erstellung der CharBuilder App verwendeten und warum diese von uns gewählt wurden. Hierbei haben wir den Text in die Unterkategorien Android(Betriebssystem), Kotlin(Programmiersprache), Gson(Json Java-Lib), Gradle(Build Tool), Android Studio(IDEA) und UMLet(UML Tool) aufgeteilt. Das sind die wichtigsten Technologien, die wir zum Entwickeln unserer App genutzt haben.
 
 \subsection{Android}
 Wie in der Einleitung geschrieben, haben wir uns für Android als Betriebssystem entschieden. Da verschiedene Version dessen auf unterschiedlichen Geräten verteilt sind
@@ -43,6 +42,10 @@ Gradle ist ein weit verbreitetes Build-Tool, welches automatisiert arbeitet und 
 \subsection{Android Studio}
 
 Android Studio ist die offizielle Entwicklungsumgebung für native Androidprogrammierung. Es bietet neben den bekannten IDE Funktionen wie Syntax Highlighting, Autovervollständigung, Instant Run(Es wird nur der veränderte Teil neu kompiliert) und Debugger auch einen Android Emulator, um verschiede Geräte und Android Version zu simulieren. Die IDE basiert auf IntelliJ's Softwareprodukten. Mit der Version 3.0.1 wurde die Entwicklungsumgebung für Kotlin angepasst, dies ist auch die Version welche wir zur Entwicklung unserer App verwendeten. Dabei liefert die neue Version ebenfalls ein Programm, um Java-Code direkt in Kotlin-Code umzuwandeln.  Dem Entwickler wird so der Einstieg in Kotlin erleichtert, das Tool sollte im späteren Verlauf aber nur selten genutzt werden, um eine einheitliche Codequalität zu erreichen.
+
+\subsection{UMLet}
+
+UMLet ist ein kostenloses Open-Source UML Tool mit einer simplen Benutzeroberfläche. Die erstellten Diagramme lassen sich z.B. als pdf, jpg oder png exportieren. Wenn einem die große Auswahl an UML Elementen nicht reicht, kann man eigene erstellen oder importieren. Zum Zeichnen unserer Diagramme haben wir die Version 14.2 genutzt. %\cite{http://www.umlet.com/}
 
 \newpage
 \section{Anforderungen}
@@ -119,6 +122,7 @@ Die App stellt einen digitalen Pen und Paper Charakterbogen dar. Es wird möglic
 \section{Architektur}
 
 \section{Implementierung}
+
 
 \section{Test und Usability}
 
