--- a/Dokumentation/LaTeX Doku/content/quellen.bib
+++ b/Dokumentation/LaTeX Doku/content/quellen.bib
@@ -1,1 +1,7 @@
 % Encoding: UTF-8
+@Book{rulebook,
+author = {Sterling Hershey},
+title = {Star Wars: Edge of the Empire Core Rulebook},
+publisher = {Fantasy Flight Games},
+year = {2013}
+}
