Small Fix for items

--- a/Dokumentation/LaTeX Doku/content/Auswertung.tex
+++ b/Dokumentation/LaTeX Doku/content/Auswertung.tex
@@ -93,9 +93,9 @@ Da die Erstellung eines Charakters im offiziellen Regelwerk bereits in sinnvolle
 
 Es gibt zwei Layouts, die in mehreren Fragmenten als Listenelement in \textit{ListViews} oder als Group Item in \textit{ExpandableListViews} eingesetzt werden:
 \begin{description}
-\item[char_creation_litview.xml]\hfill\\
-Ein Layout bestehend aus zwei \textit{TextViews} für Name und kurz Beschreibung der Pflicht.
-\item[char_creation_career_group_item.xml]\hfill
+\item[char\_creation\_listview.xml]\mbox{}\\ Ein Layout bestehend aus zwei \textit{TextViews} für Name und kurz Beschreibung der Pflicht.
+
+\item[char\_creation\_career\_group\_item.xml]\mbox{}\\ Das ist ein Satz 
 \end{description}
 
 
@@ -121,6 +121,9 @@ Jede Pflicht hat eine Wahrscheinlichkeit von 8\% durch den Zufall ausgewählt zu
 \subsubsection{MotivationFragment.kt}
 \subsubsection{AppearanceFragment.kt}
 \subsubsection{GearFragment.kt}
+
+\subsection{Würfeltool}
+
 
 \section{Test und Usability}
 
