--- a/Dokumentation/LaTeX Doku/content/quellen.bib
+++ b/Dokumentation/LaTeX Doku/content/quellen.bib
@@ -5,3 +5,12 @@ title = {Star Wars: Edge of the Empire Core Rulebook},
 publisher = {Fantasy Flight Games},
 year = {2013}
 }
+
+@ARTICLE{dataclasses,
+    author  = {Eugen Paraschiv},
+    title   = {{Data Classes in Kotlin}},
+    journal = {Baeldung},
+    year    = {2017},
+    note    = {\url{http://www.baeldung.com/kotlin-data-classes}\\
+Stand: 17.01.2018}
+}
