--- a/Dokumentation/LaTeX Doku/content/Auswertung.tex
+++ b/Dokumentation/LaTeX Doku/content/Auswertung.tex
@@ -72,7 +72,7 @@ Eine weitere Funktion der App ist das eingebaute Würfeltool. Wenn der Nutzer si
 Damit Charaktere nicht an ein bestimmtes Gerät gebunden sind, sollte der Nutzer die Möglichkeit haben, seine Charakterdaten als JSON-Datei in Google Drive zu speichern. Jeder Charakter bereist im Zuge seiner erlebten Abenteuer eine Vielzahl von Orten. Um dem Spieler eine Erinnerungsstütze zu geben, an welchen Orten sein Charakter schon war und was für Abenteuer er dabei abgeschlossen hat, sollte es eine Art Reisetagebuch für jeden Charakter geben.
 
 \subsection{Could Have}
-Es wird nicht ausgeschlossen, dass die App die Erstellung von Charakteren in unterschiedlichen Regelwerken ermöglicht. Allerdings gibt es große Unterschiede in der Komplexität und dem Umfang von Pen and Paper Regelwerken, weswegen zunächst nur ein Regelwerk unterstützt wird. Eine englischsprachige Version der App ist geplant. Das Übersetzen der Regeln nimmt jedoch viel Zeit in Anspruch. Eine weitere mögliche Option wäre das Einbinden der Google Billing Api, die dem Entwickler das Freischalten von In-App Käufen ermöglicht.
+Es wird nicht ausgeschlossen, dass die App die Erstellung von Charakteren in unterschiedlichen Regelwerken ermöglicht. Allerdings gibt es große Unterschiede in der Komplexität und dem Umfang von Pen and Paper Regelwerken, weswegen zunächst nur ein Regelwerk unterstützt wird. Eine englischsprachige Version der App ist geplant. Das Übersetzen der Regeln nimmt jedoch viel Zeit in Anspruch. Eine weitere mögliche Option wäre das Einbinden der Google Billing API, die dem Entwickler das Freischalten von In-App Käufen ermöglicht.
 
 \subsection{Won't Have}
 Die App wird keine Gruppenverwaltung ermöglichen. Das bedeutet, dass ein Spielleiter nicht die Charaktere seiner Gruppenmitglieder einsehen kann. Außerdem werden in der App keine spielbaren Abenteuer vorhanden sein. Sie dient lediglich dem Speichern und Verwalten von Pen and Paper Charakteren. Nutzer der App werden in der App keine Anleitung für das Spielen von Pen and Paper Abenteuern finden. Alle verwendeten Auszüge aus Regelwerken dienen ausschließlich der Unterstützung während des Erstellungsprozesses. 
@@ -105,28 +105,41 @@ Ein Layout bestehend aus zwei \textit{TextViews} für Name und kurz Beschreibung
 Dieses Layout besteht nur aus einem \textit{TextView} und wird in \textit{ExpandableListViews} als Group Item Layout verwendet.
 \end{description}
 
-Einige der Fragmente verfügen über eine \textit{Data Class}. Diese Klassen sind ein in Kotlin eingeführtes Konzept, um das Schreiben von unnötigem \grqq Boilerplate Code\grqq{} in einfachen Klassen, die nur als Datencontainer genutzt werden, zu verhindern\cite{dataclasses}. Häufig werden die Datenklassen in den Fragmenten dazu genutzt, Daten aus einer geparsten XML-Datei zu speichern und sie dann in ein \textit{ListView}-Element zu laden. Mit Hilfe dieser Methode erleichtern wir uns das Zuordnen der passenden Kurzbeschreibungen und Regeltexte zu einem entsprechenden Regelbegriff.\\
+Einige der Fragmente verfügen über eine \textit{Data Class}. Diese Klassen sind ein in Kotlin eingeführtes Konzept, um das Schreiben von unnötigem \grqq Boilerplate Code\grqq{} in einfachen Klassen, die nur als Datencontainer genutzt werden, zu verhindern \cite{dataclasses}. Häufig werden die Datenklassen in den Fragmenten dazu genutzt, Daten aus einer geparsten XML-Datei zu speichern und sie dann in ein \textit{ListView}-Element zu laden. Mit Hilfe dieser Methode erleichtern wir uns das Zuordnen der passenden Kurzbeschreibungen und Regeltexte zu einem entsprechenden Regelbegriff.\\
 
 Im Folgenden werden wir auf die einzelnen Fragmente und ihre Funktionen eingehen.
 
 \subsubsection{ObligationFragment.kt}
-Der erste Schritt in einer Charaktererstellung ist das Bestimmen der Verpflichtung/en eines Charakters. Das Regelwerk zu \glqq Star Wars : Am Rande des Imperiums\grqq{}\cite[39]{rulebook} gibt eine Liste von zwölf wählbaren Pflichten vor. Dem Spieler werden zwei Möglichkeiten angeboten, eine Pflicht für seinen Charakter zu wählen:
+Der erste Schritt in einer Charaktererstellung ist das Bestimmen der Verpflichtung/en eines Charakters. Das Regelwerk zu \glqq Star Wars : Am Rande des Imperiums\grqq{} \cite[39]{rulebook} gibt eine Liste von zwölf wählbaren Pflichten vor. Dem Spieler werden zwei Möglichkeiten angeboten, eine Pflicht für seinen Charakter zu wählen:
 \begin{enumerate}
 \item Der Spieler sucht sich aus der Liste mit zwölf Einträgen eine für ihn passende Pflicht aus.
 \item Durch das Drücken auf einen Button lässt der Spieler die App per Zufall ein oder zwei Pflichten bestimmen.
 \end{enumerate}
 
-Zur Umsetzung der Liste haben wir uns für eine \textit{ListView} entschieden, die durch den \textit{ObligationsViewAdapter} mit Inhalt gefüllt.\\
+Zur Umsetzung der Liste haben wir uns für eine \textit{ListView} entschieden, die durch die innere Klasse \textit{ObligationsViewAdapter} mit Inhalt gefüllt wird. Der \textit{ObligationsViewAdapter} ist eine Unterklasse des \textit{BaseAdapters} aus der Android API, welcher in der \textit{onCreateView}-Methode des Fragments als Adapter der \textit{ListView} gesetzt wird. Mit der Liste aus Pflichten, die zuvor aus einer XML-Datei geparst wurde, erstellt der Adapter dann jedes Listenelement anhand des Layouts aus der \textit{char\_creation\_listview.xml}. Nachdem ein Listenelement angeklickt wurde, wird es blau hinterlegt und der Name der Pflicht wird als aktuell ausgewählte Pflicht im oberen Textfeld angezeigt.\\
 
-Jede Pflicht hat eine Wahrscheinlichkeit von 8\% durch den Zufall ausgewählt zu werden. Insgesamt hat der Spieler also eine Chance von 96\% nur eine Pflicht bei der zufälligen Bestimmung zu erhalten. Die übrigen 4\% bilden die Wahrscheinlichkeit dafür, dass der Charakter mit zwei Pflichten startet. Diese Warscheinlichkeiten für das Auswählen der Pflichten wurden dem Regelwerk\cite[39]{rulebook} entnommen, das eine Tabelle mit Würfelergebnissen für jede Verpflichtung beinhaltet. Während der Erstellung ist die Zufallsbestimmung der einzige Weg, eine zweite Verpflichtung zu erhalten. Aus diesem Grund musste in der Implementierung darauf geachtet werden, dass das Textfeld der zweiten Pflicht zurückgesetzt wird, wenn eine neue ausgewählt wird. Dabei ist es egal, ob die neue Verpflichtung durch den Spieler oder den Zufall gesetzt wird. Wenn die derzeitige Pflicht dem Spieler nicht gefällt, kann er sie beliebig oft selbst ändern oder durch Drücken des Buttons neu bestimmen. Die Reihenfolge der Aktionen spielt dabei auch keine Rolle.\\
+Jede Pflicht hat eine Wahrscheinlichkeit von 8\% durch den Zufall ausgewählt zu werden. Insgesamt hat der Spieler also eine Chance von 96\% nur eine Pflicht bei der zufälligen Bestimmung zu erhalten. Die übrigen 4\% bilden die Wahrscheinlichkeit dafür, dass der Charakter mit zwei Pflichten startet. Diese Warscheinlichkeiten für das Auswählen der Pflichten wurden dem Regelwerk \cite[39]{rulebook} entnommen, das eine Tabelle mit Würfelergebnissen für jede Verpflichtung beinhaltet. Während der Erstellung ist die Zufallsbestimmung der einzige Weg, eine zweite Verpflichtung zu erhalten. Aus diesem Grund musste in der Implementierung darauf geachtet werden, dass das Textfeld der zweiten Pflicht zurückgesetzt wird, wenn eine neue ausgewählt wird. Dabei ist es egal, ob die neue Verpflichtung durch den Spieler oder den Zufall gesetzt wird. Wenn die derzeitige Pflicht dem Spieler nicht gefällt, kann er sie beliebig oft selbst ändern oder durch Drücken des Buttons neu bestimmen. Die Reihenfolge der Aktionen spielt dabei keine Rolle.\\
 
 \subsubsection{SpeciesFragment.kt}
 \subsubsection{CareerFragment.kt}
 \subsubsection{SpecializationFragment.kt}
 \subsubsection{AttributeFragment.kt}
 \subsubsection{ExperienceFragment.kt}
+
 \subsubsection{MotivationFragment.kt}
-Probleme mit dreifach ListView und komplettes Redesign erwähnen
+In diesem Schritt der Charaktererstellung wählt der Spieler die Motivation des Charakters aus. Es gibt insgesamt 30 Motivationen, die in drei Oberkategorien mit jeweils zehn Motivationen eingeteilt sind. Wie auch im \textit{ObligationFragment} hat der Spieler zwei Möglichkeiten zur Auswahl:
+\begin{enumerate}
+\item Der Spieler sucht sich aus den drei Oberkategorien mit insgesamt 30 Einträgen eine für ihn passende Motivation aus.
+\item Die App bestimmt durch Drücken eines Buttons per Zufall ein oder zwei Motivationen.
+\end{enumerate}
+
+Zur Umsetzung der Listen mit den drei Oberkategorien nutzen wir eine \textit{ExpandableListView}, da sie genau die Eigenschaften mitbringt, die für so eine Darstellung nötig sind. Wenn der Nutzer zu diesem Fragment wechselt, sieht er zunächst nur die drei Oberkategorien Zielsetzung, Beweggrund und Bindung. Diese Group Items besitzen das Layout der \textit{char\_creation\_career\_group\_item.xml}, welches ihnen durch den \textit{MotivationListAdapter} zugeteilt wird. Als Unterklasse des \textit{BaseExpandableListAdapters} wird der \textit{MotivationListAdapater} in der \textit{onCreateView}-Methode des Fragments als Adapter der \textit{ExpandableListView} eingesetzt. Klickt der Nutzer auf ein Group Item, wird die Liste mit den zugehörigen Motivationen entfaltet. Das Layout der Child Items ist wiedermal die \textit{char\_creation\_listview.xml}.\\
+
+Da die Motivationen in drei Kategorien eingeteilt sind, verlief die Bestimmung der Motivationen per Zufall etwas anders als im \textit{ObligationFragment}. Zunächst wurden anhand einer Tabelle im Regelwerk \cite[94]{rulebook} die Wahrscheinlichkeiten der Oberkategorien entnommen. Die Tabelle gibt für jede der Kategorien eine Wahrscheinlichkeit von 30\% an. Die übrigen 10\% geben die Chance wieder, bei der Erstellung eine zweite Motivation zu bekommen. Tritt dieser Fall ein, müssen zwei Kategorien ausgewürfelt werden. Nachdem eine oder zwei Kategorien bestimmt wurden, aus denen eine Motivation gewählt wird, erfolgt ein erneuter Zufallswurf. Für diese Zufallsbestimmung liegt die Wahrscheinlichkeit für alle Motivationen der jeweiligen Gruppe bei 10\%. Auch in diesem Fragment gilt die Zufallsbestimmung als einzige Möglichkeit, eine zweite Motivation zu erhalten. Beim Klicken auf ein Child Item oder das erneute Drücken des Zufallsbuttons wird das Feld für die zweite Motivation zurückgesetzt.\\
+
+Die \textit{ExpandableListView} war nicht unsere erste Wahl zur Dartstellung der Motivationen. Das ursprüngliche Layout des Fragments bestand aus drei untereinander angeordneten \textit{ListViews}, welche
+durch \textit{TextViews} mit den Namen der jeweiligen Gruppen voneinander abgegrenzt werden sollten. Damit der Nutzer alle drei \textit{ListViews} durch Scrollen erreichen kann, sollten sie in einer \textit{ScrollView} angeordnet sein. Android lässt es allerdings nicht zu, zwei scrollbare Elemente ineinander zu verschachteln. Also musste die einfache Lösung, die bereits im \textit{ObligationFragment} Verwendung gefunden hat, einer komplexeren Lösung weichen. Unser nächster Ansatz war, die drei \textit{ListViews} in \textit{CardViews} zu verpacken und diese dann untereinander anzuorden. Diese Lösung war auch nicht optimal, da die \textit{ListViews} dann auf eine minimal Größe zusammengeschrumpft sind, sodass der Nutzer keine gute Ansicht der Motivationen hatte. Schließlich wurde die Idee der drei \textit{ListViews} komplett verworfen. Der frühere \textit{BaseAdapter} musste durch einen mit wesentlich höherem Implementierungsaufwand verbundenem \textit{BaseExpandableListAdapter} ersetzt werden und die drei \textit{ListViews} wurden in einer \textit{ExpandableListView} zusammengefasst.
+
 \subsubsection{AppearanceFragment.kt}
 \subsubsection{GearFragment.kt}
 
